@@ -600,6 +600,7 @@ class GitPackageManagementCreateProcessor extends modObjectCreateProcessor {
                 $tvObject->set('elements', $tv->getInputOptionValues());
                 $tvObject->set('rank', $tv->getSortOrder());
                 $tvObject->set('default_text', $tv->getDefaultValue());
+                $tvObject->set('display', $tv->getDisplay());
 
                 $inputProperties = $tv->getInputProperties();
                 if (!empty($inputProperties)) {
@@ -608,7 +609,7 @@ class GitPackageManagementCreateProcessor extends modObjectCreateProcessor {
 
                 $outputProperties = $tv->getOutputProperties();
                 if (!empty($outputProperties)) {
-                    $tvObject->set('output_properties',$outputProperties[0]);
+                    $tvObject->set('output_properties',$outputProperties);
                 }
 
                 $tvObject->setProperties($tv->getProperties());
